created dropdown for profile icon

--- a/frontend/src/Task/Task.scss
+++ b/frontend/src/Task/Task.scss
@@ -187,7 +187,7 @@ section.todo-wrapper.container {
   }
 
   &.completed {
-    background-color: $color-success;
+    background-color: #00ff7722;
   }
 
   img.icon {
