--- a/frontend/src/App/App.scss
+++ b/frontend/src/App/App.scss
@@ -11,6 +11,13 @@ $width-desktop: 1200px;
 $width-tablet: 768px;
 $width-mobile: 480px;
 
+
+$primary-dark: darken($color-primary, 10%);
+$primary-light: lighten($color-primary, 20%);
+$background-color: #f9f9f9;
+$text-color: #333;
+$subtext-color: #666;
+
 body {
   box-sizing: border-box;
 }
