modified styles in notification and styles

--- a/frontend/src/Notification/Notification.scss
+++ b/frontend/src/Notification/Notification.scss
@@ -64,3 +64,19 @@
 .notification-dropdown .close-btn:hover {
   color: #333;
 }
+
+  // Custom scrollbar for results
+.notification-dropdown {
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #FC5813;
+    border-radius: 4px;
+  }
+}
